fixed step 4 visuals and aligned reach out ccolumns

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,7 +242,7 @@ intro p {
 
 .contact h2 {
     color: #fce138;
-    display: inline-block;
+    display: block;
 }
 
 .contact-info iframe {
